# LED-Matrix

./: .gitignore  README.md
LEDMatrixHub/: LEDMatrixHub.sln
LEDMatrixHub/LEDMatrixHub/: LEDMatrixHub.qrc  LEDMatrixHub.ui  LEDMatrixHub.vcxproj  LEDMatrixHub.vcxproj.filters  OutputWindow.cpp  OutputWindow.h
LEDMatrixHub/LEDMatrixHub/include/: AbstractDockWindow.hpp  AnimationPlayer.hpp  Animations.hpp  ClientConnectWindow.hpp  Constants.hpp  InteractiveDisplayWindow.hpp  LEDColorConfiguration.hpp  LEDMatrixHub.hpp  LEDMatrixModel.hpp  OutputWindow.hpp  RainbowAnimation.hpp  SceneConfiguration.hpp  ScrollEventFilter.hpp  WaveAnimation.hpp  common.hpp
LEDMatrixHub/LEDMatrixHub/src/: InteractiveDisplayWindow.cpp  LEDMatrixHub.cpp  LEDMatrixModel.cpp  main.cpp
LEDMatrixHub/LEDMatrixHub_UnitTests/: LEDMatrixHub_UnitTests.vcxproj  LEDMatrixHub_UnitTests.vcxproj.filters  math_funcs.h  test_color.cc  test_messages.cc
LEDMatrix_ESP32/: CMakeLists.txt
LEDMatrix_ESP32/color/: color.c  color.h
LEDMatrix_ESP32/main/: CMakeLists.txt  commands.c  console.c  esp.c  esp.h  led_helper.c  led_helper.h  wifi_helper.c  wifi_helper.h
LEDMatrix_ESP32/networking/: message_headers.h  messages.c
LEDMatrix_ESP32/utils/: builtin_animations.c  builtin_animations.h  math_funcs.h
POCs/LED-test/: CMakeLists.txt
POCs/LED-test/main/: CMakeLists.txt  color.c  color.h  commands.h  esp.c  esp.h  gpio_helper.c  gpio_helper.h  led_helper.c  led_helper.h  test_color.c
POCs/serial-terminal/: CMakeLists.txt
POCs/wifi-poc/: CMakeLists.txt  dummy_server.py
documentation/: project-notes.md
(+20 files in other folders)
